@@ -23,6 +23,7 @@
   * JRuby 1.9 mode causes dead lock while running rake #571
   * HTML::Document#meta_encoding does not raise exception on docs with
     malformed content-type. #655
+  * Nokogiri::XML::Text#to_ary returns an array with the node text. #679
 
 
 == 1.5.2 / 2012-03-09
